<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="user_icon">Ảnh người dùng</string>
    <string name="delete_icon">Xóa khách hàng</string>

    <string name="customer_name_placeholder">Tên:</string>
    <string name="customer_pickup_placeholder">Đón:</string>
    <string name="customer_dropoff_placeholder">Trả:</string>
    <string name="customer_phone_placeholder">Sđt:</string>
    <string name="customer_email_placeholder">Email:</string>
    <string name="app_name">TLU_RideShare</string>
    <string name="cd_back">Quay lại</string>
    <string name="cd_home">Trang chủ</string>
    <string name="cd_trip">Chuyến đi</string>
    <string name="cd_list">Danh sách</string>
    <string name="cd_account">Tài khoản</string>

    <!-- Tiêu đề & nhãn -->
    <string name="title_customer_list">Danh sách khách hàng</string>
    <string name="hint_search_customer">Tìm kiếm khách hàng</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_trip">Chuyến đi</string>
    <string name="nav_list">Danh sách</string>
    <string name="nav_account">Tài khoản</string>
    <string name="gcm_defaultSenderId" translatable="false">646387867315</string>
    <string name="google_api_key" translatable="false">AIzaSyBdEfCy2WrSojh4TCP1qUImHuj7qllsmc0</string>
    <string name="google_app_id" translatable="false">1:646387867315:android:b1a8b86f0581ce83e95ac6</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyBdEfCy2WrSojh4TCP1qUImHuj7qllsmc0</string>
    <string name="google_storage_bucket" translatable="false">tlurideshare.firebasestorage.app</string>
    <string name="project_id" translatable="false">tlurideshare</string>
    <string name="app_name">TLU Ride Share</string>
    <string name="title_login">Kết nối để chia sẻ những chuyến đi ý nghĩa</string>
    <string name="app_logo">TLU RIDESHARE</string> <string name="app_logo_description">Logo ứng dụng TLU Ride Share</string>
    <string name="register_slogan">Đăng ký tài khoản mới</string>
    <string name="forgot_password_text">Quên mật khẩu</string>
    <string name="no_account_register_now">Chưa có tài khoản? Đăng ký ngay!</string>
    <string name="already_have_account_login_now">Bạn đã có tài khoản? Đăng nhập ngay!</string>
    <string name="login_button_text">ĐĂNG NHẬP</string>
    <string name="register_button_text">ĐĂNG KÝ</string>
    <string name="email_hint">EMAIL</string>
    <string name="email_or_phone_hint">EMAIL hoặc SĐT</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="confirm_password_hint">Xác nhận mật khẩu</string>

</resources>